# zzz-proj-stub--weather-app

./: .gitignore  README.rst  app.py  pyproject.toml
templates/: index.html
